--- a/src/sample/dashboard.fxml
+++ b/src/sample/dashboard.fxml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
+<?import java.lang.*?>
+<?import java.util.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
+<AnchorPane xmlns="http://javafx.com/javafx"
+            xmlns:fx="http://javafx.com/fxml"
+            fx:controller="sample.dashboardController"
+            prefHeight="400.0" prefWidth="600.0">
 
-<AnchorPane prefHeight="778.0" prefWidth="1317.0" style="-fx-background-color: #fff;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
-   <children>
-      <VBox prefHeight="778.0" prefWidth="288.0" style="-fx-background-color: #001DD2;">
-         <children>
-            <Button mnemonicParsing="false" prefHeight="45.0" prefWidth="288.0" style="-fx-background-color: #001DD2;" text="Button" />
-         </children>
-      </VBox>
-   </children>
 </AnchorPane>
