--- a/src/sample/main.fxml
+++ b/src/sample/main.fxml
@@ -1,16 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="405.0" prefWidth="888.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="sample.Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="405.0" prefWidth="1025.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="sample.Controller">
    <children>
       <VBox layoutX="22.0" layoutY="14.0" prefHeight="160.0" prefWidth="147.0" spacing="17.0">
          <children>
@@ -44,7 +38,7 @@
             <TextField fx:id="tfIdade" />
          </children>
       </VBox>
-      <TableView fx:id="tvAlunos" layoutX="372.0" layoutY="13.0" prefHeight="377.0" prefWidth="507.0">
+      <TableView fx:id="tvAlunos" layoutX="372.0" layoutY="13.0" onMouseClicked="#handleMouseAction" prefHeight="377.0" prefWidth="303.0">
         <columns>
           <TableColumn fx:id="colId" prefWidth="75.0" text="id" />
           <TableColumn fx:id="colMatricula" prefWidth="75.0" text="matricula" />
@@ -53,7 +47,15 @@
         </columns>
       </TableView>
       <Button fx:id="btnCadastrar" layoutX="45.0" layoutY="212.0" mnemonicParsing="false" onAction="#handleButtonAction" text="Cadastrar" />
-      <Button fx:id="btnAtualizar" layoutX="167.0" layoutY="212.0" mnemonicParsing="false"  onAction="#handleButtonAction" prefHeight="25.0" prefWidth="67.0" text="Atualizar" />
-      <Button fx:id="btnExcluir" layoutX="281.0" layoutY="212.0" mnemonicParsing="false"  onAction="#handleButtonAction" prefHeight="25.0" prefWidth="62.0" text="Excluir" />
+      <Button fx:id="btnAtualizar" layoutX="167.0" layoutY="212.0" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="25.0" prefWidth="67.0" text="Atualizar" />
+      <Button fx:id="btnExcluir" layoutX="281.0" layoutY="212.0" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="25.0" prefWidth="62.0" text="Excluir" />
+      <TableView fx:id="tvAlunos1" layoutX="701.0" layoutY="14.0" onMouseClicked="#handleMouseAction" prefHeight="377.0" prefWidth="303.0">
+         <columns>
+            <TableColumn fx:id="colId1" prefWidth="75.0" text="id" />
+            <TableColumn fx:id="colMatricula1" prefWidth="75.0" text="matricula" />
+            <TableColumn fx:id="colNome1" prefWidth="75.0" text="nome" />
+            <TableColumn fx:id="colIdade1" prefWidth="75.0" text="idade" />
+         </columns>
+      </TableView>
    </children>
 </AnchorPane>
